add NewtofsonJson to project + add TinkofApi to project (https://github.com/RomeProduction/TinkofClientApi)

--- a/Nop.Plugin.Payments.Tinkoff.csproj
+++ b/Nop.Plugin.Payments.Tinkoff.csproj
@@ -22,5 +22,8 @@
     <!-- Delete unnecessary libraries from plugins path -->
     <MSBuild Projects="@(ClearPluginAssemblies)" Properties="PluginPath=$(MSBuildProjectDirectory)\$(OutDir)" Targets="NopClear" />
   </Target>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
 
 </Project>
